--- a/.github/workflows/jekyll-docker1.yml
+++ b/.github/workflows/jekyll-docker1.yml
@@ -1,4 +1,4 @@
-name: Jekyll site CI with Docker
+name: Jekyll Site CI with Docker
 
 on:
   push:
@@ -8,6 +8,7 @@ on:
 
 env:
   JEKYLL_ENV: production
+  BUNDLE_PATH: vendor/bundle
 
 jobs:
   build:
@@ -22,22 +23,25 @@ jobs:
       - name: Cache gems
         uses: actions/cache@v3
         with:
-          path: vendor/bundle
+          path: ${{ env.BUNDLE_PATH }}
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-gems-
 
-      - name: Install dependencies
+      - name: Set up Ruby
         run: |
-          bundle config path vendor/bundle
+          bundle config path ${{ env.BUNDLE_PATH }}
           bundle install
 
       - name: Build with Jekyll
         run: |
-          jekyll build --trace
+          jekyll build --trace --verbose
+        continue-on-error: false
+        timeout-minutes: 10
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
+        if: success()
         with:
           name: jekyll-site
           path: ./_site
@@ -45,7 +49,7 @@ jobs:
 
   deploy:
     needs: build
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && success()
     runs-on: ubuntu-latest
     
     steps:
@@ -64,3 +68,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_site
           keep_files: false
+          force_orphan: true
